--- a/.github/workflows/getLibcoreAar.yml
+++ b/.github/workflows/getLibcoreAar.yml
@@ -28,3 +28,8 @@ jobs:
       - name: Native Build
         if: steps.cache.outputs.cache-hit != 'true'
         run: ./run lib core
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: libcore-aar
+          path: app/libs/libcore.aar
