--- a/.github/workflows/getLibcoreAar.yml
+++ b/.github/workflows/getLibcoreAar.yml
@@ -33,3 +33,8 @@ jobs:
         with:
           name: libcore-aar
           path: app/libs/libcore.aar
+      - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: libcore-aar
+        path: app/libs/libcore.aar
